2005-09-10  Bruno coudoin  <bruno.coudoin@free.fr>

	Added non functionnal hanoi_real game (the real tower of hanoi).

	* boards/Makefile.am:
	* boards/hanoi_real.xml.in:
	* boards/searace.xml.in: removed " and <> that bugs our reread menu
	* docs/screenshots/billard.jpg:
	* po/Makefile.in.in:
	* po/POTFILES.in:
	* src/boards/Makefile.am:
	* src/boards/hanoi.c: (hanoi_create_item): fixed string
	* src/boards/hanoi_real.c: (pause_board), (start_board),
	(end_board), (set_level), (is_our_board), (hanoi_next_level),
	(hanoi_destroy_all_items), (dump_solution), (print_piece),
	(hanoi_create_item), (game_won), (is_completed), (item_event):

2005-09-09  Bruno coudoin  <bruno.coudoin@free.fr>
	
	Fixed connect4 (bug #313432)
	Added sudoku dataset (9x9 level)
	Removed external lauch of mozilla in the about box. It create problems
	when kids click all around.

	* src/boards/python/sudoku.py:
	* src/boards/python/connect4.py:
	* src/gcompris/about.c

2005-09-08  Yves Combe  <yves@ycombe.net>

	fix bargame help bug.

	* src/boards/py-mod-gcompris.c:
	(py_gcompris_get_wordlist_from_file):
	* src/boards/python/bargame.py:
	* src/boards/python/pythontest.py:
	* src/gcompris/wordlist.c: (gcompris_get_wordlist_from_file):

2005-09-06  Bruno coudoin  <bruno.coudoin@free.fr>

	Created new xml files for new wordlist format.
	The new file format includes all levels in a single file
	It will be easier to manage them at all level

	* boards/wordsgame/default-da.xml:
	* boards/wordsgame/default-el.xml:
	* boards/wordsgame/default-en.xml:
	* boards/wordsgame/default-es.xml:
	* boards/wordsgame/default-fi.xml:
	* boards/wordsgame/default-fr.xml:
	* boards/wordsgame/default-hu.xml:
	* boards/wordsgame/default-it.xml:
	* boards/wordsgame/default-lt.xml:
	* boards/wordsgame/default-nb.xml:
	* boards/wordsgame/default-nn.xml:
	* boards/wordsgame/default-pt.xml:
	* boards/wordsgame/default-pt_BR.xml:
	* boards/wordsgame/default-ro.xml:
	* boards/wordsgame/default-ru.xml: